- Fixed bug #52487 (PDO::FETCH_INTO leaks memory)